force-app/main/default/objects/Product_Constrain_Config__c/Product_Constrain_Config__c.object-meta.xml
<CustomObject>
    <description>SOX object - Object has mapping to allow a Sales Rep to select a product only if another rubrik product is already selected</description>
    <label>Product Constrain Config</label>
    <nameField>
        <label>Product Constrain Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Constrain Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>