force-app/main/default/objects/Product_Constrain_Config__c/fields/Check_Current_Quote__c.field-meta.xml
<CustomField>
    <fullName>Check_Current_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this true, If you want to include looking on dependent product in current Quote.</description>
    <label>Check Current Quote</label>
    <type>Checkbox</type>
</CustomField>