force-app/main/default/objects/Product_Constrain_Config__c/fields/Could_be_Repurchased__c.field-meta.xml
<CustomField>
    <fullName>Could_be_Repurchased__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>checked when we want the dependent product to be purchased if it is either in Asset or Contract line items, can handle multiple products in dependent product field</inlineHelpText>
    <label>Repurchased</label>
    <type>Checkbox</type>
</CustomField>