force-app/main/default/objects/Product_Constrain_Config__c/fields/Cross_Product_Constrain_Only__c.field-meta.xml
<CustomField>
    <fullName>Cross_Product_Constrain_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross Product Constrain Only</label>
    <type>Checkbox</type>
</CustomField>