force-app/main/default/objects/Product_Constrain_Config__c/fields/Dependent_Product__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Product__c</fullName>
    <description>It contains dependent products product code, if there are multiple product codes configuration can be done by comma separated between product codes in the same field.</description>
    <inlineHelpText>It contains dependent products product code, if there are multiple product codes configuration can be done by comma separated between product codes in the same field.</inlineHelpText>
    <label>Dependent Product</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>