force-app/main/default/objects/Product_Constrain_Config__c/fields/Dependent_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Product_Quantity__c</fullName>
    <inlineHelpText>It contains dependent product quantity for single dependent product entry</inlineHelpText>
    <label>Dependent Product Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>