force-app/main/default/objects/Product_Constrain_Config__c/fields/Self_Constrain_Only__c.field-meta.xml
<CustomField>
    <fullName>Self_Constrain_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Constrain Only</label>
    <type>Checkbox</type>
</CustomField>