force-app/main/default/objects/Product_Constrain_Config__c/validationRules/QuantityRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>QuantityRestriction</fullName>
    <active>true</active>
    <errorConditionFormula>((CONTAINS(Dependent_Product__c ,&quot;,&quot;))|| Could_be_Repurchased__c) &amp;&amp;  NOT(ISBLANK(Dependent_Product_Quantity__c ))</errorConditionFormula>
    <errorMessage>Multiple Dependent Product or Repurchased group  can&apos;t have value in Dependent Product Quantity</errorMessage>
</ValidationRule>