force-app/main/default/objects/Product_Constrain_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dependent_Product__c</columns>
    <columns>Constraining_Product__c</columns>
    <columns>Dependent_Product_Quantity__c</columns>
    <columns>Could_be_Repurchased__c</columns>
    <columns>Is_Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Cross_Product_Constrain_Only__c</columns>
    <columns>Self_Constrain_Only__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>